# jscc

./: Cargo.toml  LICENSE  build.rs
.github/workflows/: build.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/llvm-sys/: Cargo.toml  build.rs
crates/llvm-sys/examples/: disassembler.rs  jit-function.rs  nop-function.rs
crates/llvm-sys/src/: analysis.rs  bit_reader.rs  bit_writer.rs  blake3.rs  comdat.rs  core.rs  debuginfo.rs  disassembler.rs  error.rs  error_handling.rs  execution_engine.rs  ir_reader.rs  lib.rs  linker.rs  lto.rs  object.rs  remarks.rs  support.rs  target.rs  target_machine.rs
crates/llvm-sys/src/orc2/: ee.rs  lljit.rs  mod.rs
crates/llvm-sys/src/transforms/: pass_builder.rs
examples/: test.mjs
examples/baremetal/: avr.mjs
src/: lib.rs  main.rs
