[package]
name = "jscc_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jscc"
path = "src/main.rs"

[dependencies]
boa_parser = { git = "https://github.com/boa-dev/boa", version = "0.19.0" }
boa_ast = { git = "https://github.com/boa-dev/boa", version = "0.19.0" }
boa_interner = { git = "https://github.com/boa-dev/boa", version = "0.19.0" }
llvm-sys = { version = "181.1.1", features = ["prefer-static"] }
jscc_codegen = { path = "../codegen" }
clap = { version = "4.5.17", features = ["derive"] }
