[package]
name = "jscc_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
boa_ast = { git = "https://github.com/boa-dev/boa", version = "0.19.0" }
boa_interner = { git = "https://github.com/boa-dev/boa", version = "0.19.0" }
llvm-sys = { version = "181.1.1", features = ["prefer-static"] }

